--- a/modules/vision.tex
+++ b/modules/vision.tex
@@ -35,7 +35,7 @@ This is different with cones, which are active at higher light levels. Several n
 
 \textbf{Receptive Field}
 
-The receptive field is the area on which light must fall for neurons to be stimulated.The size of a receptive field determines a few things. Small receptive fields are stimulated by high spatial frequencies; and large spatial fields are stimulated by low spatial frequencies.  There are differences between the centre and periphery of field. We can't talk about these without talking about ganglion cells.
+The receptive field is the area on which light must fall for neurons to be stimulated. The size of a receptive field determines a few things. Small receptive fields are stimulated by high spatial frequencies; and large spatial fields are stimulated by low spatial frequencies. There are differences between the centre and periphery of field; the periphery of field contains more rods than cones (and vice versa). This is the reason that when we squint, we can see things in a higher quality.
 \begin{figure}[!htb]
 	\center{\includegraphics[width=6cm]
 		{vision/ganglion}}
